--- a/style.css
+++ b/style.css
@@ -16,13 +16,31 @@ body {
 
 @media print {
   body {
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    /* padding: .25in !important; */
   }
 
   .container {
     margin: 0 !important;
     padding: 0 !important;
   }
+
+  @page {
+    margin: 0.33in 0.4in;
+  }
+
+  a {
+    color: var(--fg-color) !important;
+  }
+
+  /* @page :left {
+    margin-left: 3cm;
+  }
+
+  @page :right {
+    margin-left: 4cm;
+  } */
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -46,10 +64,7 @@ body {
   /* font-family: 'Helvetica', 'Arial', 'Trebuchet MS', 'Verdana', sans-serif; */
   font-family: 'Open Sans', sans-serif;
 
-  padding-top: .39in;
-  padding-left: .39in;
-  padding-right: .39in;
-  padding-right: .39in;
+  padding: .39in;
 }
 
 em {
@@ -223,22 +238,15 @@ h3 {
   margin: 0;
 }
 
-#work,
-#volunteer {
-  padding-bottom: 5px;
-  /* border-bottom: 1px var(--seperator-color) solid; */
-}
-
 #work .item,
 #volunteer .item {
   margin: 12px 0 32px;
 }
 
-#skills {
+/* #skills {
   margin-bottom: 10px;
-  /* border-bottom: 1px var(--seperator-color) solid; */
   padding-bottom: 5px;
-}
+} */
 
 #skills .item,
 #languages .item {
